2010-08-31  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        gl-teximage.html and tex-image-and-sub-image-2d-with-image.html failed on Chromium Mac bots (10.5)
        https://bugs.webkit.org/show_bug.cgi?id=44993

        * platform/graphics/cg/GraphicsContext3DCG.cpp:
        (WebCore::GraphicsContext3D::getImageData): Take into consideration the source image pixel row alignment.
2010-08-31  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        gl-teximage.html and tex-image-and-sub-image-2d-with-image.html failed on Chromium Mac bots (10.5)
        https://bugs.webkit.org/show_bug.cgi?id=44993

        * platform/chromium/test_expectations.txt: Enabling the failing tests with the fix.


Canonical link: https://commits.webkit.org/57319@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66559 268f45cc-cd09-0410-ab3c-d52691b4dbfc